[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "master-of-secrets"
version = "0.1.1"
description = "Cryptographically secure Password Generator"
authors = [{name = "thelazybastard", email = "0q2m4o1uq@mozmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]
license = {text = "MIT"}
license-files = ["LICEN[CS]E*"]
keywords = ["password", "generator", "security", "cli", "cryptography"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.scripts]
secure-me = "master_of_secrets:main"

[project.urls]
Homepage = "https://github.com/thelazybastard/the-master-of-secrets"
Issues = "https://github.com/thelazybastard/the-master-of-secrets/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]